# sze_sw1_szinusz

./: CMakeLists.txt  README.md  package.xml
launch/: launch_example1.launch.py
src/: gen.cpp  sum.cpp
